# RTSTool

./: CMakeLists.txt  README.md  config.json
src/: getTime.h  main.cpp  utils.h
